# GSAT-Vocab-Website

./: .gitignore  AGENTS.md  README.md  deploy.sh
.github/workflows/: deploy-frontend.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/data/: official_wordlist.json
backend/src/: cli.py  config.py
backend/src/commands/: tts_export.py
backend/src/llm/: __init__.py  client.py  prompts.py  prompts_stage3.py  prompts_stage4.py  prompts_stage5.py
backend/src/ml/: __init__.py  business_metrics.py  embeddings.py  ensemble.py  evaluation.py  features.py  graph.py  model.py  pipeline.py  ranker.py  score_impact_evaluation.py  sense_survival.py  survival.py  train.py  value.py  weights.py
backend/src/models/: __init__.py  analysis.py  cleaned.py  exam.py  sense_assigned.py  vocab.py
backend/src/registry/: __init__.py  models.py  registry.py
backend/src/stages/: __init__.py  stage0_pdf_to_md.py  stage1_structurize.py  stage2_clean.py  stage2_extract.py  stage3_generate.py  stage3_sense_inventory.py  stage4_generate.py  stage4_output.py  stage5_relations.py  stage5_wsd.py  stage6_relations.py  stage7_output.py
backend/src/utils/: __init__.py  nlp.py  patterns.py  scraper.py  tts_hash.py  validation.py
backend/tests/: test_stage1_e2e.py
frontend/: .gitignore  DESIGN_PLAN.md  DESIGN_SYSTEM.md  README.md  UI_REDESIGN_PLAN.md  index.html  package-lock.json  package.json  prototype.html  remark-base-path.js  svelte.config.js  tsconfig.json  vite.config.ts
frontend/docs/: srs-sense-aware-spec.md
frontend/public/: auth-callback.html  (+3 more)
(+123 files in other folders)
